--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sass": "^2.1.30",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-json": "^2.2.28",
     "gatsby-transformer-sharp": "^2.3.13",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-headroom": "^3.0.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
+    "smooth-scroll": "^16.1.2",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
