--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -22,7 +22,7 @@
       "image": "../images/projects/bethehero.png",
       "title": "Be The Hero",
       "description": "O BeTheHero é um projeto que visa conectar pessoas que desejam fazer contribuições monetárias a ONG's (Organizações não governamentais) que precisam de ajuda. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
-      "page": "projects/portfolio",
+      "page": "projects/bethehero",
       "github": "https://github.com/f3l1p3v4/be-the-hero-semana-11",
       "link": "https://frontbethehero.netlify.com/"
     },
