--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,7 +6,8 @@
       "description": "O Aircnc é um projeto que visa conectar empresas que querem abrir spots e desenvolvedores que procuram um lugar para trocar ideias com devs, conhecer a empresa e trabalhar lá por um período. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
       "page": "projects/aircnc",
       "github": "https://github.com/f3l1p3v4/aircnc-semana-09",
-      "link": "https://frontaircnc.netlify.com/"
+      "link": "https://frontaircnc.netlify.com/",
+      "apk": "https://drive.google.com/file/d/1tk_eqrd24dKfxWBZf4IvaFyiBmWsoz5c/view?usp=sharing"
     },
     {
       "id": "02",
@@ -15,7 +16,8 @@
       "description": "O DevRadar é um projeto que visa conectar desenvolvedores próximos a você que trabalham com as mesmas tecnologias. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
       "page": "projects/devradar",
       "github": "https://github.com/f3l1p3v4/devradar-semana-10",
-      "link": "https://frontdevradar.netlify.com/"
+      "link": "https://frontdevradar.netlify.com/",
+      "apk": "https://drive.google.com/open?id=1Xc_gFmztbCfttYbd1UsC2ntRk3XCEadA"
     },
     {
       "id": "03",
@@ -24,7 +26,8 @@
       "description": "O BeTheHero é um projeto que visa conectar pessoas que desejam fazer contribuições monetárias a ONG's (Organizações não governamentais) que precisam de ajuda. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
       "page": "projects/bethehero",
       "github": "https://github.com/f3l1p3v4/be-the-hero-semana-11",
-      "link": "https://frontbethehero.netlify.com/"
+      "link": "https://frontbethehero.netlify.com/",
+      "apk": "https://drive.google.com/open?id=1HJvGOFSPG2v-Z1TI7QYGsO2QF2g9XK0d"
     },
     {
       "id": "04",
