--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,41 +1,41 @@
 [
-    {
-      "id": "01",
-      "image": "../images/projects/aircnc.png",
-      "title": "AirCnC",
-      "description": "O Aircnc é um projeto que visa conectar empresas que querem abrir spots e desenvolvedores que procuram um lugar para trocar ideias com devs, conhecer a empresa e trabalhar lá por um período. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
-      "page": "projects/aircnc",
-      "github": "https://github.com/f3l1p3v4/aircnc-semana-09",
-      "link": "https://frontaircnc.netlify.com/",
-      "apk": "https://drive.google.com/file/d/1tk_eqrd24dKfxWBZf4IvaFyiBmWsoz5c/view?usp=sharing"
-    },
-    {
-      "id": "02",
-      "image": "../images/projects/devradar.png",
-      "title": "Dev Radar",
-      "description": "O DevRadar é um projeto que visa conectar desenvolvedores próximos a você que trabalham com as mesmas tecnologias. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
-      "page": "projects/devradar",
-      "github": "https://github.com/f3l1p3v4/devradar-semana-10",
-      "link": "https://frontdevradar.netlify.com/",
-      "apk": "https://drive.google.com/open?id=1Xc_gFmztbCfttYbd1UsC2ntRk3XCEadA"
-    },
-    {
-      "id": "03",
-      "image": "../images/projects/bethehero.png",
-      "title": "Be The Hero",
-      "description": "O BeTheHero é um projeto que visa conectar pessoas que desejam fazer contribuições monetárias a ONG's (Organizações não governamentais) que precisam de ajuda. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
-      "page": "projects/bethehero",
-      "github": "https://github.com/f3l1p3v4/be-the-hero-semana-11",
-      "link": "https://frontbethehero.netlify.com/",
-      "apk": "https://drive.google.com/open?id=1HJvGOFSPG2v-Z1TI7QYGsO2QF2g9XK0d"
-    },
-    {
-      "id": "04",
-      "image": "../images/projects/portfolio.png",
-      "title": "Portfólio de Desenvolvedor",
-      "description": "Um site de portfólio para mostrar meus projetos de frontend, backend e mobile. Um dos meus objetivos ao criar meu portfólio, era aprimorar minhas habilidades com o React e outras tecnologias modernas de front-end. O site foi criado com Gatsby e Sass.",
-      "page": "projects/portfolio",
-      "github": "https://github.com/f3l1p3v4/portfolio-2020",
-      "link": "https://felipevaldez.netlify.com/"
-    }
+  {
+    "id": "01",
+    "image": "../images/projects/aircnc.png",
+    "title": "AirCnC",
+    "description": "O Aircnc é um projeto que visa conectar empresas que querem abrir spots e desenvolvedores que procuram um lugar para trocar ideias com devs, conhecer a empresa e trabalhar lá por um período. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
+    "page": "projects/aircnc",
+    "github": "https://github.com/f3l1p3v4/aircnc-semana-09",
+    "link": "https://frontaircnc.netlify.com/",
+    "apk": "https://drive.google.com/file/d/1tk_eqrd24dKfxWBZf4IvaFyiBmWsoz5c/view?usp=sharing"
+  },
+  {
+    "id": "02",
+    "image": "../images/projects/devradar.png",
+    "title": "Dev Radar",
+    "description": "O DevRadar é um projeto que visa conectar desenvolvedores próximos a você que trabalham com as mesmas tecnologias. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
+    "page": "projects/devradar",
+    "github": "https://github.com/f3l1p3v4/devradar-semana-10",
+    "link": "https://frontdevradar.netlify.com/",
+    "apk": "https://drive.google.com/open?id=1Xc_gFmztbCfttYbd1UsC2ntRk3XCEadA"
+  },
+  {
+    "id": "03",
+    "image": "../images/projects/bethehero.png",
+    "title": "Be The Hero",
+    "description": "O BeTheHero é um projeto que visa conectar pessoas que desejam fazer contribuições monetárias a ONG's (Organizações não governamentais) que precisam de ajuda. Projeto construido com as aulas da semana Omnistack da Rocktseat e criado com React no frontend, Node.js no backend e React Native no mobile.",
+    "page": "projects/bethehero",
+    "github": "https://github.com/f3l1p3v4/be-the-hero-semana-11",
+    "link": "https://frontbethehero.netlify.com/",
+    "apk": "https://drive.google.com/open?id=1HJvGOFSPG2v-Z1TI7QYGsO2QF2g9XK0d"
+  },
+  {
+    "id": "04",
+    "image": "../images/projects/portfolio.jpg",
+    "title": "Portfólio de Desenvolvedor",
+    "description": "Um site de portfólio para mostrar meus projetos de frontend, backend e mobile. Um dos meus objetivos ao criar meu portfólio, era aprimorar minhas habilidades com o React e outras tecnologias modernas de front-end. O site foi criado com Gatsby e Sass.",
+    "page": "projects/portfolio",
+    "github": "https://github.com/f3l1p3v4/portfolio-2020",
+    "link": "https://felipevaldez.netlify.com/"
+  }
 ]
