--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -32,5 +32,13 @@
     "page": "projects/portfolio",
     "github": "https://github.com/f3l1p3v4/portfolio-2020",
     "link": "https://felipevaldez.netlify.com/"
+  },
+  {
+    "id": "05",
+    "image": "../images/projects/bilhetagem.jpg",
+    "title": "Sistema de Oficina",
+    "description": "Um sistema de gestão de serviços, ou seja todo serviço em algum carro que está em andamento o funcionário marca em azul, serviços em carros finalizados é marcado em verde.",
+    "page": "projects/bilhetagem",
+    "link": "https://bilhetagem.netlify.com/"
   }
 ]
