--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -31,5 +31,13 @@
     "description": "Um sistema de gestão de serviços, ou seja todo serviço em algum carro que está em andamento o funcionário marca em azul, serviços em carros finalizados é marcado em verde.",
     "page": "projects/bilhetagem",
     "link": "https://bilhetagem.netlify.com/"
+  },
+  {
+    "id": "04",
+    "image": "../images/projects/engineering.jpg",
+    "title": "ReiTec Engenharia",
+    "description": "Um site institucional da empresa Reitec para mostrar todos seus serviços de engenharia",
+    "page": "projects/engineering",
+    "link": "https://bilhetagem.netlify.com/"
   }
 ]
