--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -38,6 +38,6 @@
     "title": "ReiTec Engenharia",
     "description": "Um site institucional da empresa Reitec para mostrar todos seus serviços de engenharia",
     "page": "projects/engineering",
-    "link": "https://bilhetagem.netlify.com/"
+    "link": "https://reitecengenharia.netlify.com/"
   }
 ]
