--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -35,7 +35,7 @@
   {
     "id": "05",
     "image": "../images/projects/reitec.png",
-    "title": "ReiTec Engenharia",
+    "title": "ReiTec Serviços",
     "description": "Um site institucional da empresa Reitec para mostrar todos seus serviços de engenharia",
     "page": "projects/engineering",
     "link": "https://reitecengenharia.netlify.com/"
